test/SemanticAnalysis/Interface/InterfaceNameReference.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

interface TestInterface { }

export typename_t<TestInterface> f() {
	// CHECK: .loci:8:2: error: Can't implicitly cast value of type 'abstracttypename_t' to type 'typename_t<TestInterface>'.
	return TestInterface;
}

// CHECK: 1 error generated.
